2015-03-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mftalk.h (new): Moved to here from ../mftalk.h.
	* Makefile.am: Adapted.

2014-01-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* x11-Xlib.c: Cast screenwidth, screendepth to 'unsigned int'.

2013-07-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tek.c: Replace bzero(t, l) => memset(t, 0, l) and bcmp() =>
	memcmp().

2012-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-07-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* win32.c: Avoid TL W32TeX differences.

2010-02-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mfdisplay.h: New file with protos for display routines.
	* Makefile.am: Add the new file.

	* amiga.c, epsf.c, mftalk.c
	#include <mfdisplay.h>, mf_*_initscreen returns int.

	* hp2627.c, next.c, regis.c, suntools.c, tek.c, uniterm.c
	#include <mfdisplay.h>.

	* trap.c: mf_trap_initscreen() returns int.
	#include <mfdisplay.h> and drop externs.

	* win32.c: #include <mfdisplay.h>.
	Do not skip Win32Error() for MinGW32, add static forward decl.
	Drop unused variables szAppName, black, and white.

	* x11-Xlib.c, x11-Xt.c: #include <mfdisplay.h> and drop externs.

2010-01-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* amiga.c, win32.c: Current METAFONT Version is 2.718281.

2009-12-23  Karl Berry  <karl@tug.org>

	* mftalk.c: doc fix.

2009-06-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* epsf.c, hp2627.c, mftalk.c, next.c, regis.c, suntools.c,
	tek.c, uniterm.c, win32.c: drop P?C, P?H, use ANSI C function
	declarations.

2009-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CFLAGS): enable compiler warnings.
	* trap.c, x11-Xlib.c, x11-Xt.c: use ANSI C prototypes.

2008-02-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* x11-Xt.c: remove unused preprocessor stuff (FOIL...).

2008-01-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.in: Add @configure_input@ line.

2005-06-26  Olaf Weber  <olaf@infovore.xs4all.nl>
